--- a/space/package.json
+++ b/space/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "dependencies": {
     "@aragon/client": "^1.1.0",
-    "@aragon/os": "^4.0.1"
+    "@aragon/os": "^4.0.1",
+    "eth-ens-namehash": "^2.0.8"
   },
   "devDependencies": {
     "@aragon/cli": "^5.2.2",
-    "parcel-bundler": "^1.11.0"
+    "parcel-bundler": "^1.11.0",
+    "@aragon/test-helpers": "^1.0.0"
   },
   "scripts": {
     "start": "aragon run",
