--- a/Community/space/arapp.json
+++ b/Community/space/arapp.json
@@ -9,6 +9,7 @@
   "environments": {
     "default": {
       "network": "development",
+      "registry": "0x5f6f7e8cc7346a11ca2def8f827b7a0b612c56a1",
       "appName": "coinsence-aragon.aragonpm.eth"
     },
     "staging": {
