--- a/Community/space/package.json
+++ b/Community/space/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@aragon/client": "^1.1.0",
     "@aragon/os": "^4.0.1",
-    "eth-ens-namehash": "^2.0.8",
     "keccak256": "^1.0.0"
   },
   "devDependencies": {
     "@aragon/cli": "^5.2.2",
     "parcel-bundler": "^1.11.0",
-    "@aragon/test-helpers": "^1.0.0"
+    "@aragon/test-helpers": "^1.0.0",
+    "chai": "^4.2.0",
+    "eth-ens-namehash": "^2.0.8"
   },
   "scripts": {
     "start": "aragon run",
