--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "coinsence-poc",
   "devDependencies": {
+    "lerna": "^3.13.1"
   },
   "scripts": {
     "clean": "git clean -ffdx",
@@ -12,9 +13,9 @@
     "devchain:reset": "aragon devchain --reset",
     "publish:apps": "lerna run publish",
     "publish:http": "lerna run publish:http",
-    "test:space": "cd apps/space && npm test"
+    "test:space": "lerna run test --scope={@coinsence/space}"
   },
   "dependencies": {
-    "@aragon/cli": "5.0.0"
+    "@aragon/cli": "^5.2.2"
   }
 }
