--- a/apps/coinsence-kit/package.json
+++ b/apps/coinsence-kit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coinsence/coinsence-kit",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "author": "Haythem Sellami",
   "repository": {
@@ -11,15 +11,15 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@aragon/os": "^4.0.1",
-    "@coinsence/space": "0.0.1",
-    "@coinsence/coin": "0.0.1",
+    "@coinsence/coin": "^0.0.2",
+    "@coinsence/space": "^0.0.2",
     "keccak256": "^1.0.0"
   },
   "devDependencies": {
     "@aragon/cli": "^5.2.2",
-    "parcel-bundler": "^1.11.0",
     "chai": "^4.2.0",
-    "eth-ens-namehash": "^2.0.8"
+    "eth-ens-namehash": "^2.0.8",
+    "parcel-bundler": "^1.11.0"
   },
   "scripts": {
     "start": "aragon run",
