--- a/apps/space/package.json
+++ b/apps/space/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coinsence/space",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "dependencies": {
     "@aragon/client": "^1.1.0",
@@ -9,10 +9,10 @@
   },
   "devDependencies": {
     "@aragon/cli": "^5.2.2",
-    "parcel-bundler": "^1.11.0",
     "@aragon/test-helpers": "^1.0.0",
     "chai": "^4.2.0",
-    "eth-ens-namehash": "^2.0.8"
+    "eth-ens-namehash": "^2.0.8",
+    "parcel-bundler": "^1.11.0"
   },
   "scripts": {
     "start": "aragon run",
